WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33966
r53595
breaks Database in Chromium
https://bugs.webkit.org/show_bug.cgi?id=33966
Summary
r53595 breaks Database in Chromium
Eric U.
Reported
2010-01-21 12:34:28 PST
I missed out a few chromium-specific files; without them, the database APIs are inaccessible. I'll post the patch shortly.
Attachments
Patch adding 3 missing files; this should fix all the storage tests for Chromium.
(3.64 KB, patch)
2010-01-21 12:39 PST
,
Eric U.
dimich
: review+
dimich
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric U.
Comment 1
2010-01-21 12:39:21 PST
Created
attachment 47139
[details]
Patch adding 3 missing files; this should fix all the storage tests for Chromium.
Dmitry Titov
Comment 2
2010-01-21 12:54:09 PST
Comment on
attachment 47139
[details]
Patch adding 3 missing files; this should fix all the storage tests for Chromium. r=me Will land manually in a moment, ChangeLog needs some re-phrasing.
Dmitry Titov
Comment 3
2010-01-21 13:04:19 PST
Landed:
http://trac.webkit.org/changeset/53641
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug