Add changes missing from r53595, without which Chromium has no database.

Patch by Eric Uhrhane <ericu@chromium.org> on 2010-01-21
Reviewed by Dmitry Titov.

https://bugs.webkit.org/show_bug.cgi?id=33966

No new tests - fixes database layout tests in Chromium.

WebCore:

* bindings/v8/RuntimeEnabledFeatures.cpp:
* bindings/v8/RuntimeEnabledFeatures.h:

WebKit/chromium:

* src/WebRuntimeFeatures.cpp:
(WebKit::WebRuntimeFeatures::enableDatabase):
(WebKit::WebRuntimeFeatures::isDatabaseEnabled):

Canonical link: https://commits.webkit.org/45040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53641 268f45cc-cd09-0410-ab3c-d52691b4dbfc