WebKit/chromium/src/WebRuntimeFeatures.cpp
@@ -31,6 +31,7 @@
 #include "config.h"
 #include "WebRuntimeFeatures.h"
 
+#include "Database.h"
 #include "RuntimeEnabledFeatures.h"
 #include "WebMediaPlayerClientImpl.h"
 #include "WebSocket.h"
@@ -42,14 +43,14 @@ namespace WebKit {
 void WebRuntimeFeatures::enableDatabase(bool enable)
 {
 #if ENABLE(DATABASE)
-    RuntimeEnabledFeatures::setDatabaseEnabled(enable);
+    Database::setIsAvailable(enable);
 #endif
 }
 
 bool WebRuntimeFeatures::isDatabaseEnabled()
 {
 #if ENABLE(DATABASE)
-    return RuntimeEnabledFeatures::databaseEnabled();
+    return Database::isAvailable();
 #else
     return false;
 #endif
